--- a/ui/.env.example
+++ b/ui/.env.example
@@ -11,4 +11,8 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/task?schema=public
+INFURA_URL=https://mainnet.infura.io/v3/3bFWSd5JAkeh
+NODE_ENV=production
+NODE_PORT=8000
+NEXT_PUBLIC_API_URL_ENTRYPOINT=http://localhost:3000/api
