--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "start": "npm run start:server && npm run start:ui",
     "start:server": "node --experimental-specifier-resolution=node server/.express/server/src",
     "start:ui": "next start ui",
+    "test": "npm run test:server && npm run test:ui",
+    "test:server": "jest --config server/jest.config.ts",
+    "test:ui": "jest --config ui/jest.config.ts",
     "clean": "rm -rf server/.express ui/.next"
   },
   "engines": {
@@ -41,6 +44,8 @@
   },
   "devDependencies": {
     "@metamask/providers": "^10.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/eslint": "^8.21.3",
     "@types/express": "^4.17.17",
@@ -53,6 +58,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
@@ -62,12 +68,14 @@
     "eslint-plugin-node": "^11.1.0",
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.13.0",
     "supertest": "^6.3.3",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.5",
     "typescript": "^5.0.4"
